# multi-terminal-taker

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: implement.md  planner.md  reviewer.md  sync-time.md  tester.md
.claude/handoffs/: 2026-02-16-2130-mvp-implementation.md
.github/workflows/: test.yml
docs/: BPD.md  CHANGELOG.md  DECISIONS.md  SDD.md
docs/FSD/: _TEMPLATE.md  auto-popup.md  popup-queue.md  terminal-scan.md
scripts/: hook-busy.sh  hook-idle.sh  sync-template.sh
src/mtt/: __init__.py  cli.py  daemon.py  detector.py  monitor.py  queue.py  window_controller.py
src/terminal_activator/: __init__.py  cli.py  daemon.py  detector.py  monitor.py  queue.py  window_controller.py
src/terminal_activator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_detector.py  test_queue.py
