[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-activator"
version = "0.1.0"
description = "Auto-popup terminals waiting for user input — like poker multi-table software for your terminal"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []
readme = "README.md"
keywords = ["terminal", "macos", "automation", "claude-code", "ai-agent", "iterm2", "applescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/wkdgks150/terminal-activator"
Repository = "https://github.com/wkdgks150/terminal-activator"
Issues = "https://github.com/wkdgks150/terminal-activator/issues"

[project.scripts]
terminal-activator = "terminal_activator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
