[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-terminal-taker"
version = "0.1.0"
description = "Auto-popup terminals waiting for user input — like a poker MTT client for your terminal"
requires-python = ">=3.12"
license = "MIT"
dependencies = []
readme = "README.md"
keywords = ["terminal", "macos", "automation", "claude-code", "ai-agent", "iterm2", "applescript", "mtt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/wkdgks150/multi-terminal-taker"
Repository = "https://github.com/wkdgks150/multi-terminal-taker"
Issues = "https://github.com/wkdgks150/multi-terminal-taker/issues"

[project.scripts]
mtt = "mtt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
